# corewar

./: .champ_handler.c.swp  .free.c.swp  .gitignore  .op.h.swp  .test.swp  .touch.swp  26  42.s  CMakeLists.txt  Makefile  a.out  asm  asm.c  asm.h  barriere.s  bigzork.cor  bigzork.s  car_handler.c  champ_handler.c  check_args.c  check_args.h  check_isend.c  corewar  corewar.h  err_codes.txt  fight_visual_1.c  fight_visual_2.c  ft_bit_handler.c  ft_breakdown.c  ft_car_handler.c  ft_champ_handler.c  ft_check_args.c  ft_check_file.c  ft_check_isend.c  ft_dir_err.c  ft_draw.c  ft_dump_num.c  ft_fight_visual_1.c  ft_fill_screen.c  ft_init_screen.c  (+49 more)
assembler/: Makefile  arguments.c  asm.h  check_args.c  free.c  go_through.c  helpful.c  main.c  main1.c  main3.c  main4.c  main5.c  main8.c  main9.c  name_comment_errors.c  push_back.c  read_body.c  write_commands.c  write_label.c
examples/: zork.cor  zork.s
ft_printf/: ft_conver_c.c  ft_conver_inv.c  ft_conver_lc.c  ft_conver_ls.c  ft_conver_o.c  ft_conver_p.c  ft_conver_per.c  ft_conver_s.c  ft_conver_u.c  ft_helper_lc_ls.c  ft_printf.c  ft_readformat.c  libftprintf.h
inc/: asm.h
libft/: ._get_next_line.c  Makefile  author  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_itoa.c  ft_itoal.c  ft_itoao.c  ft_itoau.c  ft_itoax.c  ft_lnwrd.c  ft_lstadd.c  ft_lstaddend.c  ft_lstdel.c  ft_lstdellast.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_putchar.c  ft_putendl.c  (+41 more)
(+212 files in other folders)
